add chapter six

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,17 @@
         <activity android:name=".chapterthree.customview.CustomViewActivity"/>
         <activity android:name=".chapterthree.customviewgroup.CustomViewGroupActivity"/>
         <activity android:name=".chapterthree.customviewlayout.CustomViewLayoutActivity"/>
-        <activity android:name=".chapterfour.ChapterFourActivity"/>
-        <activity android:name=".chapterfour.DragViewTest" />
-        <activity android:name=".chapterfour.DragViewGroupTest" />
+        <activity android:name=".chapterfive.ChapterFiveActivity"/>
+        <activity android:name=".chapterfive.dragview.DragViewTest"/>
+        <activity android:name=".chapterfive.draggroup.DragViewGroupTest"/>
+        <activity android:name=".chaptersix.ChapterSixActivity"/>
+        <activity android:name=".chaptersix.canvaspaintbase.CanvasPaintActivity"/>
+        <activity android:name=".chaptersix.clock.ClockActivity"/>
+        <activity android:name=".chaptersix.layer.LayerActivity"/>
+        <activity android:name=".chaptersix.image.ImageColorActivity"/>
+        <activity android:name=".chaptersix.image.ColorMatrix"/>
+        <activity android:name=".chaptersix.image.PixelsEffect"/>
+        <activity android:name=".chaptersix.image.PrimaryColor"/>
     </application>
 
 </manifest>
